structuring is done yet

--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,1 @@
-body {
-  border: 2px solid black;
-  margin: 10px 500px;
-}
-
-header {
-  border: 5px double black;
-}
-
-header nav {
-  background-color: papayawhip;
-  display: flex;
-  flex-flow: column nowrap;
-  text-decoration: none;
-}
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
